--- a/base-template.html
+++ b/base-template.html
@@ -6,27 +6,12 @@
     <title>Dummy Template</title>
     <meta name="description" content="Dummy Template">
     <meta name="author" content="SUKHI-AATMA">
-    <link rel="stylesheet" href="less/style.less?v=1.0">
+    <link rel="stylesheet" href="css/style.css?v=1.0">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
 </head>
-
 <body>
-    <script src="javascript/script.js"></script>
-    <script>
-    less = {
-        env: "development",
-        async: false,
-        fileAsync: false,
-        poll: 1000,
-        functions: {},
-        dumpLineNumbers: "comments",
-        relativeUrls: false,
-        rootpath: ":/a.com/"
-    };
-    </script>
-    <script src="javascript/less.min.js" type="text/javascript"></script>
-</body>
-
+    <script src="js/script.js"></script>
+    </body>
 </html>
