--- a/flexiple.html
+++ b/flexiple.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dummy Template</title>
-    <meta name="description" content="Dummy Template">
+    <title>Flexiple</title>
+    <meta name="description" content="Flexiple">
     <meta name="author" content="SUKHI-AATMA">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="css/style.min.css?v=1.0">
