--- a/base-template.html
+++ b/base-template.html
@@ -16,6 +16,9 @@
   <footer></footer>
   <script src="js/init.js"></script>
   <script src="js/index.js"></script>
+  <script>
+  INDEX.init()
+  </script>
 </body>
 
 </html>
